--- a/client/src/scss/home/subs-components/_banner.scss
+++ b/client/src/scss/home/subs-components/_banner.scss
@@ -1,98 +1,115 @@
 .home-banner {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-top: 5.625rem;
-  width: 100%;
-  height: 31.875rem;
-  @include breakpoint-up(large) {
-    height: 45.625rem;
-  }
-  @include breakpoint-up(medium) {
-    height: 40rem;
-  }
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-image: url("../../../assets/home/mobile/image-header-1.jpg");
-  @include breakpoint-up(large) {
-    align-items: flex-start;
-  }
+  background-color: $dark;
 
-  @include breakpoint-up(medium) {
-    background-image: url("../../../assets/home/tablet/image-header-1.jpg");
-  }
-  @include breakpoint-up(large) {
-    background-image: url("../../../assets/home/desktop/image-hero-1.jpg");
-  }
-
-  .banner-titles {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 7rem;
+  .home-container {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 1440px;
+    margin: 0 auto;
+    width: 100%;
+    height: 31.875rem;
+    position: relative;
 
     @include breakpoint-up(medium) {
-      margin-top: 0;
+      height: 45.625rem;
+      margin-top: 5.625rem;
     }
-
     @include breakpoint-up(large) {
-      position: absolute;
+      margin-top: unset;
+    }
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url("../../../assets/home/mobile/image-header-1.jpg");
+    @include breakpoint-up(large) {
       align-items: flex-start;
-      left: 15%;
-      top: 12rem;
     }
 
-    .banner-title {
-      margin-bottom: 1.5rem;
+    @include breakpoint-up(medium) {
+      background-image: url("../../../assets/home/tablet/image-header-1.jpg");
     }
-    .a {
-      margin-top: 1rem;
+    @include breakpoint-up(large) {
+      background-image: url("../../../assets/home/desktop/image-hero-1.jpg");
+    }
+    .banner-titles {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 7rem;
 
-      p {
-        color: #838383;
-        letter-spacing: 0.5625rem;
+      @include breakpoint-up(medium) {
+        margin-top: 0;
       }
-    }
-    .b {
-      h4 {
-        color: $white;
-        letter-spacing: 5px;
-        font-weight: 400;
-        @include breakpoint-up(large) {
-          font-size: 3.25rem;
-          text-align: start;
+
+      @include breakpoint-up(large) {
+        position: absolute;
+        align-items: flex-start;
+        left: 15%;
+        bottom: 158px;
+      }
+
+      .banner-title:not(:last-child) {
+        margin-bottom: 1.5rem;
+      }
+      .a {
+        margin-top: 1rem;
+
+        p {
+          color: #838383;
+          letter-spacing: 0.5625rem;
         }
       }
-    }
-    .c {
-      p {
-        color: #bdbdbd;
-        line-height: 1.5;
-        max-width: 20rem;
-        @include breakpoint-up(medium) {
-          width: 352px;
-        }
-
-        @include breakpoint-up(large) {
-          width: 350px;
-          text-align: start;
+      .b {
+        h4 {
+          color: $white;
+          font-weight: 700;
+          font-size: 36px;
+          line-height: 40px;
+          text-align: center;
+          letter-spacing: 1.28571px;
+          text-transform: uppercase;
+          @include breakpoint-up(large) {
+            font-style: normal;
+            font-weight: 700;
+            font-size: 56px;
+            line-height: 58px;
+            text-align: start;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+          }
         }
       }
-    }
-    .d {
-      button {
-        cursor: pointer;
-        background-color: #d87d4a;
-        color: white;
-        padding: 0rem 2rem;
-        height: 48px;
-        border: none;
+      .c {
+        p {
+          color: #bdbdbd;
+          line-height: 1.5;
+          max-width: 20rem;
+          @include breakpoint-up(medium) {
+            width: 352px;
+          }
 
-        &:hover {
-          background-color: $lightsalmon;
+          @include breakpoint-up(large) {
+            width: 350px;
+            text-align: start;
+          }
+        }
+      }
+      .d {
+        button {
+          cursor: pointer;
+          background-color: #d87d4a;
+          color: white;
+          padding: 0rem 2rem;
+          height: 48px;
+          border: none;
+
+          &:hover {
+            background-color: $lightsalmon;
+          }
         }
       }
     }
