--- a/client/src/scss/Registration/_register.scss
+++ b/client/src/scss/Registration/_register.scss
@@ -7,14 +7,16 @@
     color: $white;
     display: flex;
     align-items: center;
-    justify-content: center;
     height: 5rem;
-    max-height: 70px;
-    min-height: 50px;
+    max-height: 4.375rem;
+    position: absolute;
+    inset: 0 0 auto 0;
 
     .container {
-      margin: 0 1rem;
+      margin: 0 auto;
+      padding: 0 1rem;
       width: 100%;
+      max-width: 1440px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -28,11 +30,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 200ms ease-in-out;
-
-    @include breakpoint-up(small) {
-      height: 90%;
-    }
+    min-height: 100vh;
+    padding-top: 70px;
 
     .container {
       width: 100%;
@@ -59,16 +58,29 @@
           }
         }
 
-        h2 {
-          font-size: 1rem;
-          margin: 0.5rem 0;
-          text-align: center;
-        }
+        .buttons {
+          display: flex;
+          align-items: center;
+          gap: 0.75rem;
+          justify-content: space-between;
+          flex-direction: row-reverse;
+          margin-top: 0.5rem;
 
-        .MuiLoadingButton-root {
-          border: 1px solid $gray;
-          .googleIcon {
-            margin: 0.5rem;
+          h2 {
+            font-size: 1rem;
+            margin: 0.5rem 0;
+            text-align: center;
+          }
+
+          .MuiLoadingButton-root {
+            display: flex;
+            width: 100%;
+            align-items: center;
+            height: 40px;
+            border: 1px solid $gray;
+            .googleIcon {
+              margin: 0.5rem;
+            }
           }
         }
 
@@ -86,13 +98,7 @@
         }
 
         button {
-          width: 100%;
-          height: 48px;
           transition: all 300ms ease-in-out;
-
-          &:not(:last-child) {
-            margin-top: 1rem;
-          }
 
           .MuiLoadingButton-loadingIndicator {
             justify-content: center;
