--- a/client/src/scss/history/_history.scss
+++ b/client/src/scss/history/_history.scss
@@ -44,14 +44,13 @@
   .history-carts {
     padding: 0rem 1rem;
     max-height: 260px !important;
-    overflow: auto;
+    overflow-y: auto;
   }
 
   .history-cart {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
     height: 100%;
     margin: 1rem 1rem 0rem 0rem;
     .flex {
